# aprendendoC

./: C.code-workspace  README.md  de linha
1_C/basico/01_comeco/: 1_printf.c  2_caracteres_especiais.c  3_formatacao_de_saida.c  4_datatypes.c  5_formatters_variaveis.c  6_outros_formatters.c  7_sufixos.c  8_scanf.c  Comentarios.txt
1_C/basico/02_operadores/: 1_operadores_aritmeticos.c  2_operadores_condicionais.c  3_operador_ternario.c  4_operadores_logicos.c  5_operadores_bitwise.c  6_shorts_hands.c  7_incremento_decremento.c  8_ordem_de_precedencia.c  9_right_e_left_shift.c  tabela_de_precedencias.txt
1_C/basico/03_condicionais/: 1_if.c  2_chaves.c  3_expressoes_condicionais.c  4_switch.c
1_C/basico/04_loops/: 1_while.c  3_while_true.c  5_break_e_continue.c
1_C/basico/05_arrays/: 1_arrays.c  2_limites_do_vetor.c  3_indices.c
1_C/basico/06_matrizes/: 1_matriz.c  3_chars_como_matriz.c
1_C/basico/07_strings/: 2_gets.c  3_fgets.c  4_string_no_scanf.c  5_limpeza_de_buffer.c  6_funcoes_de_buffer  6_funcoes_de_buffer.c  Strings.md  strings.txt
1_C/basico/08_ponteiros/: Memória Variáveis e Ponteiros.md  Memória Variáveis e Ponteiros.txt
1_C/basico/09_funcoes/: Funções.md
1_C/basico/10_arquivos/: Arquivos e Streams.md  Arquivos e Streams.txt
1_C/basico/10_files/: arquivos.txt
1_C/basico/11_dados_definidos/: Tipos de Dados Definidos.md
1_C/basico/12_pre_processamento/: Diretivas de Pré Processamento.md
1_C/basico/13_pre_processamento/: Flags de Compilação.md  diretivas de pré processamento.md  diretivas de pré processamento.txt  flags de compilação.md
1_C/basico/14_keywords/: asm.c  sscanf.c  stdin_stdout.c  vprintf.c
1_C/basico/14_padrao_IEEE/: 1_header_float.c  3_float.c  padrão IEEE.md  padrãoIEEE.md
1_C/basico/15_padrao_IEEE/: 1_limites_flutuantes.c  2_conversaoDeFloat.c
1_C/headers/01_strings_e_caracteres/: 1_header string.h.md  2_header ctype.h.md  3_header wchar.h.md  3_header wchar.md
1_C/headers/02_funcoes_matematicas/: 2_header complex.h.md  3_header fenv.h.md
1_C/headers/03_header_math.h/: 1_funcoes_potenciais.c  2_funcoes_para_arredondamento.c  3_funcoes_para_divisao.c  4_funcoes_exponenciais.c  5_funcoes_hiperbolicos.c  6_funcoes_trigonometricos.c  7_funcoes_de_comparacoes.c  header math.h.md
1_C/headers/03_header_stdlib.h/: header stdlib.h.md  header stdlih.h.md
1_C/headers/04_header_time.h/: header time.h.md
1_C/headers/05_header_inttypes.h/: 4_funcoes_inttypes.c  header inttypes.h.md
1_C/headers/06_header_pthreads.h/: 1_threads.c  2_pthread.c  3_pthread_mutex.c  header pthreads.h.md
2_estrutura_de_dados_e_algoritmos/01_estrutura_de_dados/: 1 estruturas de dados.md  2 estruturas não lineares.md  3 estruturas associativas.md  Estruturas de Dados.md
2_estrutura_de_dados_e_algoritmos/02_algoritmos/: 1 algoritmos paradigmas e notacoes.md  Algoritmos Paradigmas e Complexidades.md
2_estrutura_de_dados_e_algoritmos/1_estrutura_de_dados/: 1 estruturas de dados.md  2 estruturas não lineares.md
3_CMAKE/1_UTF/: .gitignore
3_CMAKE/1_UTF/scripts/: build.sh  (+1 more)
3_CMAKE/2_Gerenciador_de_Arquivos_Log/: .gitignore  Makefile
3_CMAKE/3_Funcionarios_Ti/: CMakeLists.txt
3_CMAKE/3_Funcionarios_Ti/include/: pessoa.h  utils.h
3_CMAKE/3_Funcionarios_Ti/src/: main.c  pessoa.c  processador.c  utils.c
3_CMAKE/4_trabalhando_com_diretorios_e_arquivos/: .gitignore
3_CMake/: Cmake.md  cmake.md
3_CMake/2_Gerenciador_de_Arquivos_Log/: Makefile  gerenciador_log  meu_relatorio.txt  relatorio.txt
3_CMake/3_Funcionarios_Ti/: .gitignore  CMakeLists.txt
3_CMake/3_Funcionarios_Ti/include/: processador.h
3_CMake/3_Funcionarios_Ti/src/: main.c  pessoa.c  processador.c
3_CMake/4_trabalhando_com_diretorios_e_arquivos/: CMakeLists.txt
3_CMake/4_trabalhando_com_diretorios_e_arquivos/includes/: dir_list.h
3_CMake/4_trabalhando_com_diretorios_e_arquivos/src/: dir_list.c  file_ops.c  main.c  utils.c
3_CMake/Acentuacao/: CMakeLists.txt  main.c
4_biblioteca_estaticas_dinamicas/: Biblioteca estaticas e dinamicas.md
4_biblioteca_estaticas_dinamicas/println/: meu_programa
4_biblioteca_estaticas_dinamicas/projeto_conversoes_binarias/: .gitignore  CMakeLists.txt  conversor_final
4_biblioteca_estaticas_dinamicas/projeto_conversoes_binarias/include/: converter.h
4_biblioteca_estaticas_dinamicas/projeto_conversoes_binarias/src/: converter.c  main.c
4_biblioteca_estaticas_dinamicas/projeto_permissoes_de_arquivos/: .gitignore  CMakeLists.txt  main
4_biblioteca_estaticas_dinamicas/projeto_permissoes_de_arquivos/include/: permissoes_lib.h
4_biblioteca_estaticas_dinamicas/projeto_permissoes_de_arquivos/src/: main.c  permissoes_lib.c
4_biblioteca_estaticas_dinamicas/projeto_println/: .gitignore  CMakeLists.txt  CmakeLists.txt  programa
4_biblioteca_estaticas_dinamicas/projeto_println/assembly/: println.asm
4_biblioteca_estaticas_dinamicas/projeto_println/include/: println.h
4_biblioteca_estaticas_dinamicas/projeto_println/src/: main.c
5_GUI/: Interfaces Gráficas (GUI).md  Interfaces Gŕaficas (GUI).md
5_GUI/1_introducao/: 1_telas.c  2_tabuleiro.c  3_formas.c  4_keywords.c  5_botoes.c  6_dropdown.c  7_eventos.c  8_criando_relogio.c  9_mover_personagem.c
5_GUI/1_telas/: 1_criar_tela.c  2_tabuleiro.c  3_desenhos.c
5_GUI/2_butoes/: 1_butoes_rgb.c  2_mover_personagem.c  3_caixa_de_selecao.c
5_GUI/4_circulo/: circulo.c
5_GUI/4_tempo/: 2_clock.c
5_GUI/5_GTK/Calculadora/: CMakeLists.txt
5_GUI/5_GTK/Calculadora/include/: calculator.h  input_buttons.h
5_GUI/5_GTK/Calculadora/src/: main.c
5_GUI/5_tempo/: clock.c  relogio
5_GUI/7_projeto_gerenciador_de_tarefas/: .gitignore
5_SDL/: Interfaces Gŕaficas (GUI).md
6_redes/: 01_ip.c  02_sockets.c  03_localhost.c  redes.md
C/: Linguagem C.txt
estrutura_de_dados_e_algoritmos/1_estrutura_de_dados/: 1 estruturas de dados.md  2 estruturas não lineares.md  4 variações das estruturas lineares.md
estrutura_de_dados_e_algoritmos/2_algoritmos/: 1 algoritmos paradigmas e notacoes.md  3 Greedy Algorithm.md  Dynamic Programming.md  Greedy Algorithm.md  algoritmos_paradigmas_notacoes.md
(+1169 files in other folders)
